--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,33 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# --- IntelliJ IDEA (чтобы настройки IDE не конфликтовали) ---
+.idea/
+*.iml
+out/
+gen/
+
+# --- Visual Studio / VS Code ---
+.vs/
+[Bb]in/
+[Oo]bj/
+.vscode/
+*.user
+*.suo
+*.db
+*.opendb
+
+# --- MS Office (Временные файлы, которые создаются при открытии Word) ---
+~$*.doc*
+~$*.xls*
+~$*.ppt*
+
+# --- Операционная система ---
+Thumbs.db
+Desktop.ini
+.DS_Store
+
+# --- Frontend ---
+node_modules/
+.env
