--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,27 @@ Thumbs.db
 Desktop.ini
 .DS_Store
 
-# --- Frontend ---
+# --- Frontend (HTML/JS) ---
 node_modules/
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Логи npm
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Кеш инструментов сборки 
+.cache/
+.parcel-cache/
+dist/
+build/
+
+# IDE / Live Server
+.history/
+.pnpm-debug.log*
+# для Live Server
+.live-server.json
